--- a/www/css/app.css
+++ b/www/css/app.css
@@ -1,5 +1,7 @@
 .page--orange_bg__background {
-  background: #10bc69;
+/** Atualização Master Hub (Personalização) **/
+   background: #770007;
+/** Fim da atualização **/
 }
 
 .page__content {
@@ -51,7 +53,9 @@ p.small,
 }
 
 .list-item--list_small a {
-  color: #626573;
+/** Atualização Master Hub (Personalização) **/
+color:#83868f;
+/** Fim da atualização **/
 }
 
 p.small.padding {
@@ -113,6 +117,9 @@ p.small.padding {
   background: none;
   height: 150px;
   text-align: center;
+/** Atualização Master Hub (Personalização) **/
+   margin: 15px !important;
+/** Fim da atualização **/
 }
 
 .bottom_toolbar1 {
@@ -152,7 +159,7 @@ p.small.padding {
 .button--to_orange,
 .progress-bar--material__primary,
 .fixed_toolbar_orange {
-  background: #10bc69;
+   background: #770007;
 }
 
 .button--to_green {
@@ -166,7 +173,7 @@ p.small.padding {
 }
 
 .button--rounded_button {
-  background: #10bc69;
+   background: #770007;
   font-size: 15px;
   line-height: 46px;
   height: 46px;
@@ -214,11 +221,11 @@ price,
 .toolbar-button--to_text_orange,
 #restaurant_page .toolbar-button--to_text_orange,
 .list-item--list_type_list1 ons-icon {
-  color: #10bc69;
+   color: #770007;
 }
 
 .orange_color {
-  color: #10bc69 !important;
+   color: #770007; !important;
 }
 
 .button--text_blue,
@@ -502,7 +509,9 @@ width:100%;*/
 .list-item--list_column p,
 .bottom-bar--bottom_toolbar_carousel p {
   font-family: "GoogleSans";
-  font-size: 14px;
+/** Atualização Master Hub (Personalização) **/
+   font-size: 9px;
+/** Fim da atualização **/
   margin: 0;
   padding: 0;
 }
@@ -564,7 +573,7 @@ width:100%;*/
 .green_tag,
 .pink_tag,
 .sponsored_tag {
-  background: #10bc69;
+  background: #770007;
   color: #fff;
   letter-spacing: 1px;
   left: 0;
@@ -653,7 +662,7 @@ price {
   height: 120px;
   background-size: cover !important;
   background-position: center;
-  border-radius: 3px;
+   border-radius: 0;
   margin: 10px;
 }
 
@@ -796,7 +805,7 @@ padding-left:5px;*/
 }
 
 .button--sort_btn {
-  color: #10bc69;
+  color: #770007;
   line-height: inherit;
   min-height: inherit;
   padding: 0 0 0 5px;
@@ -870,7 +879,7 @@ padding-left:5px;*/
 }
 
 span.highlight {
-  color: #10bc69;
+  color: #770007;
 }
 
 .list--list_cuisine_style ons-list-item,
@@ -925,6 +934,12 @@ span.highlight {
   background-position: center center;
 }
 
+/** Atualização Master Hub (Personalização) **/
+#startup_banner_carousel ons-carousel-item{
+    background-repeat: no-repeat;
+    /* margin-top: 40%;*/
+}
+/** Fim da atualização **/
 #restaurant_page ons-search-input {
   width: 100%;
   height: 40px;
@@ -959,6 +974,33 @@ span.highlight {
   width: 10px;
 }
 
+/** Atualização Master Hub (Personalização) **/
+.dots2 {
+    color: #fff;
+    display: table;
+    margin: auto;
+    padding: 0;
+    margin-top: -35px;
+}
+.dots2 li {
+    display: table-cell;
+    width: 25px;
+}
+
+.circle2 {
+    background: #111;
+    border-radius: 50px;
+    height: 9px;
+    margin: auto;
+    width: 9px;
+    opacity: .2;
+}
+.dots2 li.active .circle2 {
+    background: #2E3B49;
+    opacity: .9;
+    width: 9px;
+}
+/** Fim da atualização **/
 
 /*resto page menu*/
 
@@ -1026,7 +1068,7 @@ span.highlight {
 
 .carousel_resto_menu ons-carousel-item.selected,
 .carousel_small ons-carousel-item.selected {
-  border-bottom: 3px solid #10bc69;
+  border-bottom: 3px solid #770007;
 }
 
 .carousel_white {
@@ -1116,7 +1158,7 @@ span.highlight {
 }
 
 .button--green_button {
-  background: #10bc69;
+  background: #770007;
 }
 
 .full_width {
@@ -1124,7 +1166,7 @@ span.highlight {
 }
 
 .quantity_wrap ons-button {
-  background: #10bc69;
+  background: #770007;
   font-size: 22px;
   color: #fff;
   border-radius: 5px;
@@ -1305,7 +1347,7 @@ ons-button .equal_table {
 }
 
 .button--skip_button {
-  color: #10bc69;
+  color: #770007;
   line-height: inherit;
   min-height: auto;
   padding: 0;
@@ -1330,8 +1372,8 @@ ons-button .equal_table {
 #receipt h3,
 #driver_ty h3,
 #booking_receipt h3 {
-  color: #10bc69;
-  text-shadow: 1px 0 #10bc69;
+  color: #770007;
+  text-shadow: 1px 0 #770007;
   background: #fff;
   padding: 10px 20px;
   border-radius: 40px;
@@ -1819,7 +1861,7 @@ summary-wrap .col-md-6,
 }
 
 .button--button_small {
-  color: #10bc69;
+  color: #770007;
   font-family: "GoogleSans";
   font-size: 12px;
   font-weight: 600;
@@ -2083,7 +2125,7 @@ text-transform: capitalize;*/
 .spinner.small {
   height: 10px;
   width: 10px;
-  border: 5px solid #10bc69;
+  border: 5px solid #770007;
 }
 
 @keyframes rotate {
