--- a/www/css/theme.css
+++ b/www/css/theme.css
@@ -219,6 +219,16 @@ p.small {
   color: #2E3B49;
 }
 
+/** Atualização Master Hub (Personalização) **/
+.stic-lightblue {
+	color: #626573;
+}
+
+.stic-darkblue {
+	color: #2E3B49 !important;
+}
+/** Fim da atualização **/
+
 .search_wrap2 .form_wrapper ons-input {
   margin-left: 0!important;
   margin-right: 0!important;
@@ -289,8 +299,17 @@ p.small {
   text-transform: uppercase;
   font-size: 13px !important;
   font-weight: bold;
-  color: #10bc69 !important;
+  color: #770007 !important;
 }
+
+/** Atualização Master Hub (Personalização) **/
+.stic-uppercase-see-all {
+    text-transform: uppercase;
+    font-size: 9px !important;
+    font-weight: bold;
+    color: #770007 !important;
+}
+/** Fim da atualização **/
 
 .stic-book {}
 
@@ -495,14 +514,14 @@ p.small {
   text-align: center;
   margin: 5px 5px 0px 5px;
 }
-
+/** Atualização Master Hub (Personalização) **/
 .cuisine-title span {
-  font-size: 14px;
+  font-size: 11px;
   color: #626573;
   line-height: 1;
   display: inline-flex;
 }
-
+/** Fim da atualização **/
 .min-carousel-wrap {
   margin: 0px 15px;
   overflow: hidden;
@@ -621,6 +640,52 @@ p.small {
   line-height: 130px;
 }
 
+/** Atualização Master Hub (Personalização) **/
+.concatenar {
+	white-space: nowrap;
+    width: 94%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 0px 3% 0px 3% !important;
+}
+
+.botao-mapa {
+	position: absolute;
+	margin: -53px 0px 0px 0px;
+	width: -webkit-fill-available;
+	text-align: center;
+	background: transparent;
+}
+
+.botao-do-mapa {
+	background: #000000a6; 
+	border-radius: 27px;
+}
+/** Fim da atualização **/
+
+.home-banner-box {
+position: absolute;
+right: 20px;
+left: 20px;
+bottom: 15px;
+text-align: left;
+display: flex;
+flex-wrap: wrap;
+}
+
+.stic-carousel ons-carousel-item:first-child .home-banner-box {
+left: 15px;
+}
+
+.home-carousel-wrap {
+align-self: flex-end;
+flex: 0 0 100%;
+}
+
+.home-carousel-wrap.active_desc {
+
+}
+
 .home-carousel-wrap h4 {
   color: #fff;
   margin: 0;
@@ -683,6 +748,79 @@ p.small {
 .stic-gray {
   color: #626573;
 }
+
+/** Atualização Master Hub (Personalização) **/
+.stic-walkthrough {
+	margin: 0px 4% 0px 14%;
+    position: absolute;
+    height: 170px;
+    right: 0px;
+    bottom: 0px;
+    text-align: -webkit-center;
+    width: 90%;
+}
+
+.stic-walkthrough-login {
+ 	position: absolute;
+    width: 100%;
+    height: 235px;
+    float: inherit;
+    margin-bottom: 0;
+    right: 0px;
+    bottom: 0;
+}
+.stic-walkthrough-log {
+	position: absolute;
+    width: 100%;
+    height: 190px;
+    float: inherit;
+    margin-bottom: 0;
+    right: 0px;
+    bottom: 0;
+    text-align: center;
+}
+
+.stic-walkthrough-img {
+	bottom: 0;
+    left: 0;
+    overflow: auto;
+    padding: 3em;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 0;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+	z-index: -1;
+}
+
+.stic-start {
+	margin-top: 20px;
+	text-align: center;
+}
+
+.stic-start .button--to_neutral {
+	margin-left: 5px;
+	border-radius: 9px !important;
+	border: 0px solid #c2c4cc;
+	padding: 0;
+	width: 140px;
+	background-color:#8B0202;
+	color: #FFFFFF;
+}
+
+.stic-start .button--to_orange {
+	margin-right: 5px;
+	border-radius: 9px !important;
+	padding: 0;
+	width: 140px;
+}
+
+.startup_banner_carousel {
+	height: 100% !important;
+}
+/** Fim da atualização **/
 
 .stic-home-shadow {
   background: linear-gradient(15deg, rgba(0, 0, 0, .4) 5%, rgba(0, 0, 0, .2) 35%, rgba(0, 0, 0, 0) 65%);
@@ -866,9 +1004,10 @@ ons-pull-hook {
   letter-spacing: 1px;
   text-transform: uppercase;
 }
-
 #home ons-toolbar {
-  background: #2E3B49;
+/** Atualização Master Hub (Personalização) **/
+  background: #770007;
+/** Fim da atualização **/
   /* height: 35px; */
   z-index: 1;
   overflow: visible;
@@ -881,7 +1020,9 @@ ons-pull-hook {
 }
 
 #home .page--material__background {
-  background: #2E3B49;
+/** Atualização Master Hub (Personalização) **/
+  background: #770007;
+/** Fim da atualização **/
 }
 
 .reviews-qty {
@@ -891,7 +1032,9 @@ ons-pull-hook {
 }
 
 .home-search-section {
-  background: #2E3B49;
+/** Atualização Master Hub (Personalização) **/
+  background: #770007;
+/** Fim da atualização **/
   position: relative;
   height: 23px;
 }
@@ -929,16 +1072,20 @@ ons-pull-hook {
 }
 
 .hatake {
-  color: #10bc69;
+  color: #770007;
 }
 
 .darkblue,
 .active .tabbar--material__button {
-  color: #2E3B49;
+/** Atualização Master Hub (Personalização) **/
+  color: #770007;
+/** Fim da atualização **/
 }
 
 .darkblue-bg {
-  background: #2E3B49;
+/** Atualização Master Hub (Personalização) **/
+  background: #770007;
+/** Fim da atualização **/
 }
 
 .white {
@@ -946,7 +1093,9 @@ ons-pull-hook {
 }
 
 .stic-reload {
-  background: #2E3B49;
+/** Atualização Master Hub (Personalização) **/
+  background: #770007;
+/** Fim da atualização **/
   color: #fff;
   border: none;
   font-size: 14px;
@@ -1076,7 +1225,9 @@ ons-pull-hook {
 }
 
 .home-user-section {
-  background: #2E3B49;
+/** Atualização Master Hub (Personalização) **/
+    background: #770007;
+/** Fim da atualização **/
   padding: 20px 0 10px;
 }
 
@@ -1590,7 +1741,7 @@ ons-pull-hook {
 }
 
 .stic-list-promo p.small {
-  color: #10bc69;
+  color: #770007;
 }
 
 .stic-list-cuisine h4,
@@ -1616,6 +1767,11 @@ ons-pull-hook {
 .fill-black {
   fill: #2E3B49 !important;
 }
+/** Atualização Master Hub (Personalização) **/
+.background-white {
+	background: white !important;
+}
+/** Fim da atualização **/
 
 .min-offers-carousel {}
 
@@ -1920,7 +2076,7 @@ ons-pull-hook {
 }
 
 .stic-desc-full .button--link_button {
-  color: #10bc69;
+  color: #770007;
   font-size: 14px;
   margin-top: 10px;
   text-decoration: underline;
@@ -2100,13 +2256,42 @@ ons-pull-hook {
 
 .stic-options-list.address .right span {
   margin: auto;
-  color: #10bc69;
-  ;
+  color: #770007;
 }
 
 .stic-options-list.list-item--chevron:before {
   right: 0;
 }
+
+/** Atualização Master Hub (Personalização) **/
+.stic-options-list {
+padding: 0;
+margin: 0 20px;
+width: auto;
+}
+
+.stic-options-list-address .right {
+line-height: 48px;
+}
+
+.stic-options-list-address.address .right {
+line-height: 1;
+text-align: right;
+margin-left: 50px;
+}
+
+.stic-options-list-address.address .left {
+white-space: pre;
+}
+
+.stic-options-list-address.address .right span {
+margin: auto;
+color: #770007;
+}
+.stic-options-list-address.list-item--chevron:before {
+right: 8px;
+}
+/** Fim da atualização **/
 
 .stic-total-row {
   border: none;
@@ -2123,6 +2308,23 @@ ons-pull-hook {
   font-size: 16px;
   letter-spacing: .5px;
 }
+
+/** Atualização Master Hub (Personalização) **/
+.stic-address-row {
+	border: none;
+    background: #eee;
+    color: #fff;
+    padding: 4px 7px;
+    border-radius: 15px;
+    margin: 5px 8px 5px 8px;
+    width: auto;
+}
+
+.stic-address-row div {
+color: #626573;
+font-size: 13px;
+}
+/** Fim da atualização **/
 
 .stic-mobile-num {
   width: 100%;
@@ -2224,7 +2426,7 @@ ons-pull-hook {
 
 .stic-food-promo .stic-cuisine {
   color: #fff;
-  background: #10bc69;
+  background: #770007;
   border-radius: 3px;
   padding: 0 4px;
   font-size: 14px;
@@ -2263,7 +2465,7 @@ ons-pull-hook {
 }
 
 .stic-food-promo .min-carousel-wrap p {
-  color: #10bc69;
+  color: #770007;
 }
 
 .stic-promo-shadow {
